# try-fastapi-chatgpt

./: Dockerfile  README.md  pyproject.toml  requirements.txt
try_fastapi_chatgpt/application/api/: fastapi.py
try_fastapi_chatgpt/domain/: travel_recommender.py
try_fastapi_chatgpt/travel_recommendation/: __init__.py  recommendation_strategy.py  travel_recommendation.py  travel_recommender.py
