[tool.poetry]
name = "try-fastapi-chatgpt"
version = "0.0.1"
description = ""
authors = ["Clinton Poserio"]
readme = "README.md"
packages = [{include = "try_fastapi_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
